# interview-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json
.github/workflows/: deploy-hf-space.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/agents/: coach.py  evaluator.py  graph.py  interviewer.py  resume_analyzer.py
backend/app/api/: auth_routes.py  routes.py  voice_routes.py
backend/app/core/: auth.py  config.py  database.py  llm.py  prompts.py  rate_limiter.py  redis.py  utils.py
backend/app/models/: schemas.py  tables.py
backend/app/services/: database.py  interview.py  stt_context.py  tts_prefetch.py  users.py
backend/tests/: test_stt_context.py  test_tts_prefetch.py
frontend/: package-lock.json  package.json
frontend/src/: proxy.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/components/auth/: AuthErrorBanner.tsx  AuthShell.tsx
frontend/src/components/interview/: ChatBubble.tsx  EvaluationCard.tsx  ProgressBar.tsx  ResumeUpload.tsx  VoiceInput.tsx  VoiceModePrompt.tsx
frontend/src/components/layout/: AuthProvider.tsx  ForceDark.tsx  Navbar.tsx  ThemeToggle.tsx
frontend/src/components/report/: QuestionAccordion.tsx  ScoreGauge.tsx
frontend/src/hooks/: useAutoSave.ts  useSSEAnswer.ts  useTextToSpeech.ts  useVoiceRecorder.ts
frontend/src/lib/: api.ts  audio.ts  exportReportPDF.ts  pdf.ts
frontend/src/store/: authStore.ts  themeStore.ts
(+7 files in other folders)
